--- a/src/components/CourseCards/Card.css
+++ b/src/components/CourseCards/Card.css
@@ -266,7 +266,7 @@ Variables
       -ms-flex-align: center;
           align-items: center;
   position: absolute;
-  top: 159.5px;
+  top: 174px;
 }
 
 .professorPhoto {
@@ -285,7 +285,7 @@ Variables
   transition-property: opacity;
 }
 
-.instructorName {
+.classInstructorName {
   font-family: "Roboto", sans-serif;
   font-weight: 700;
   font-style: 12px;
@@ -300,7 +300,7 @@ Variables
   transition-property: opacity;
 }
 
-.instructorName::before {
+.classInstructorName::before {
   content: ' | ';
 }
 /*# sourceMappingURL=Card.css.map */
