--- a/src/components/CourseCards/Card.scss
+++ b/src/components/CourseCards/Card.scss
@@ -232,7 +232,7 @@ transition-property: box-shadow;
     justify-content: center;
     align-items: center;
     position: absolute;
-    top: $coverImageHeight * 0.55;
+    top: $coverImageHeight * 0.6;
 }
 
 .professorPhoto{
@@ -247,7 +247,7 @@ transition-property: box-shadow;
     transition-property: opacity;
 }
 
-.instructorName{
+.classInstructorName{
     font-family: $robotoFont;
     font-weight: 700;
     font-style: 12px;
