--- a/src/components/Freebies/Freebies.css
+++ b/src/components/Freebies/Freebies.css
@@ -5,9 +5,16 @@
 }
 
 .freebiesSection{
+    position: relative;
     height: 500px;
     width: 100vw;
-    background-image: linear-gradient(175deg, #184B5A, #43BCE2);
+}
+
+.freebiesContainer{
+    position: absolute;
+    height: 500px;
+    width: 100vw;
+    background: linear-gradient(175.14deg, #184B5A 4.49%, #43BCE2 100.96%);
     display: flex;
 }
 
