--- a/src/components/Instructors/Instructors.css
+++ b/src/components/Instructors/Instructors.css
@@ -53,6 +53,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    /* width: 250px; */
 }
 
 .instructorName{
@@ -60,13 +61,17 @@
     font-family: 'Roboto', sans-serif;
     font-weight: bold;
     font-size: 20px;
-    height: 30px;
+    line-height: 55px;
+    width: 130px;
     margin: 20px;
+    border-radius: 10px;
+    text-align: center
 }
 
-.profileInstuctor :hover{
-    /* 
-    Highlight name 
-    */
+.profileInstuctor {
+   width: 250px;
+   display: flex;
+   flex-direction: column;
+   justify-content: center;
+   align-items: center;
 }
-
