--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -3,17 +3,22 @@
     padding: 0;
     margin: 0;
   }
-  
+
   .navbar {
-    background-color: #0e0e0e;
-    height: 50px;
+    background-color: #1f1f1f;
+    height: 90px;
     width: 100vw;
     padding: 25px;
     display: flex;
     align-items: center;
     justify-content: space-between;
+    position: fixed;
+    top: 0;
+    z-index: 1;
   }
 
+
+  /* change img to class name */
   img {
     height: 30px;
     width: 30px;
@@ -26,6 +31,18 @@
   .hamburger{
     display: none;
   }
+
+  .menuSec{
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .navMenu{
+    position: absolute;
+    right: 90px;
+  }
   
   li {
     display: inline;
@@ -37,6 +54,9 @@
     font-weight: 500;
     padding: 20px;
     font-family: 'Roboto', sans-serif;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 20px;
   }
   
   @media only screen and (max-width: 1024px) {
