--- a/src/components/Welcome/welcome.css
+++ b/src/components/Welcome/welcome.css
@@ -6,8 +6,18 @@
 
 .welcomeSection{
     width: 100vw;
-    height: 650px;
     position: relative;
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    height: 650px;
+}
+
+.welcomeContainer{
+    position: absolute;
+    top:90px;
+    height: 560px;
+    width: 100% ;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -19,9 +29,8 @@
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
-    top: 0;
     width: 80vw;
-    height: 650px;
+    height: 560px;
     padding: 80px 0;
 }
 
@@ -30,18 +39,21 @@
     flex-direction: column;
 }
 
-#welcomeVideo{
-    height: auto;
+.welcomeVideo{
+    position: absolute;
+    height: 560px;
     width: 100vw;
+    object-fit: cover;
+    top: 0px;
     object-fit: cover;
 }
 
 .welcomeHeader{
-color: #f6f6f6;
-font-size: 2em;
-font-weight: bold;
-text-align: center;
-font-family: 'Roboto', sans-serif;
+    color: #f6f6f6;
+    font-size: 2em;
+    font-weight: bold;
+    text-align: center;
+    font-family: 'Roboto', sans-serif;
 }
 
 .welcomeHeader2{
