--- a/src/components/CourseCards/Card.scss
+++ b/src/components/CourseCards/Card.scss
@@ -152,6 +152,7 @@ $priceTagSize: 132px;
     display: none;
     position: absolute;
     top: $coverImageHeight * 0.80;
+    cursor: pointer;
 }
 
 .leanMoreButton:hover {
