--- a/src/components/ClassDetails/ClassDetails.css
+++ b/src/components/ClassDetails/ClassDetails.css
@@ -8,7 +8,7 @@ box-sizing: border-box;
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 100vw;
+    width: 100%;
     height: 800px;
 }
 
