--- a/src/components/CourseCards/CourseCards.css
+++ b/src/components/CourseCards/CourseCards.css
@@ -7,12 +7,44 @@
 
 .courseCardsSecion {
   height: auto;
-  width: 100vw;
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+#topCourses {
+  text-align: center;
+  display: block;
+  line-height: 100px;
+  font-family: 'Roboto', san-serif;
+  text-transform: uppercase;
+  font-size: 26px;
+  margin-top: 80px;
+}
+
+#courseCard {
+  padding: 50px;
+  margin-right: 3px;
+}
+
+#cardLayout {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -ms-flex-pack: distribute;
       justify-content: space-around;
-  padding: 50px;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  margin: 40px;
 }
 /*# sourceMappingURL=CourseCards.css.map */
