--- a/src/components/Freebies/Freebies.css
+++ b/src/components/Freebies/Freebies.css
@@ -7,13 +7,13 @@
 .freebiesSection{
     position: relative;
     height: 500px;
-    width: 100vw;
+    width: 100%;
 }
 
 .freebiesContainer{
     position: absolute;
     height: 500px;
-    width: 100vw;
+    width: 100%;
     background: linear-gradient(175.14deg, #184B5A 4.49%, #43BCE2 100.96%);
     display: flex;
 }
@@ -67,7 +67,7 @@
     padding: 50px;
 }
 
-.getStartedButton{
+#getStartedButton{
     background-color: #008dc3;
     text-transform: uppercase;
     color: #f6f6f6;
@@ -83,7 +83,7 @@
     outline: none;
 }
 
-.getStartedButton:hover{
+#getStartedButton:hover{
     background-color: #f8872a;
 }
 
