--- a/src/components/Instructors/Instructors.css
+++ b/src/components/Instructors/Instructors.css
@@ -6,7 +6,7 @@
 
 .instructorsContainer{
     height: 445px;
-    width: 100vw;
+    width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
