--- a/src/components/Welcome/welcome.css
+++ b/src/components/Welcome/welcome.css
@@ -5,7 +5,7 @@
 }
 
 .welcomeSection{
-    width: 100vw;
+    width: 100%;
     position: relative;
     display: flex;
     justify-content: center;
@@ -42,7 +42,7 @@
 .welcomeVideo{
     position: absolute;
     height: 560px;
-    width: 100vw;
+    width: 100%;
     object-fit: cover;
     top: 0px;
     object-fit: cover;
@@ -71,7 +71,7 @@
     align-items: center;   
 }
 
-.reserveSeatButton{
+#reserveSeatButton{
     background-color: #E9852A;
     text-transform: uppercase;
     color: #f6f6f6;
@@ -85,9 +85,13 @@
     cursor: pointer;
     border-style: none;
     outline: none;
+    overflow: hidden;
+    position: relative;
 }
 
-.reserveSeatButton:hover {
+
+
+#reserveSeatButton:hover {
     background-color:#FF6B00;
 }
 
