--- a/src/components/Freebies/Freebies.css
+++ b/src/components/Freebies/Freebies.css
@@ -1,89 +1,108 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+* {
+  margin: 0;
+  padding: 0;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
-.freebiesSection{
-    position: relative;
-    height: 500px;
-    width: 100%;
+.freebiesSection {
+  position: relative;
+  height: 500px;
+  width: 100%;
 }
 
-.freebiesContainer{
-    position: absolute;
-    height: 500px;
-    width: 100%;
-    background: linear-gradient(175.14deg, #184B5A 4.49%, #43BCE2 100.96%);
-    display: flex;
+.freebiesContainer {
+  position: absolute;
+  height: 500px;
+  width: 100%;
+  background: linear-gradient(175.14deg, #184B5A 4.49%, #43BCE2 100.96%);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
 }
 
-.freebiesHeader{
-    height: 500px;
-    width: 540px;
-    padding: 40px;  
-    clip-path: polygon(0 0, 100% 0, 80% 100%, 0 100%);
-    background-color: #1AC7FD;
-    font-family: 'Lexend Exa', sans-serif;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+.freebiesHeader {
+  height: 500px;
+  width: 540px;
+  padding: 40px;
+  -webkit-clip-path: polygon(0 0, 100% 0, 80% 100%, 0 100%);
+          clip-path: polygon(0 0, 100% 0, 80% 100%, 0 100%);
+  background-color: #1AC7FD;
+  font-family: 'Lexend Exa', sans-serif;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
-.freeSpan{
-    text-transform: uppercase;
-    font-size: 90px;
-    color: #f6f6f6;
-    letter-spacing: 3px;
+.freeSpan {
+  text-transform: uppercase;
+  font-size: 90px;
+  color: #f6f6f6;
+  letter-spacing: 3px;
 }
 
-.extraSpan{
-    text-transform: uppercase;
-    font-size: 32px;
-    color: #f6f6f6;
-    letter-spacing: 1px;
+.extraSpan {
+  text-transform: uppercase;
+  font-size: 32px;
+  color: #f6f6f6;
+  letter-spacing: 1px;
 }
 
-.quoteHeader1{
-    font-family: 'Roboto', sans-serif;
-    color: #48C7EF;
-    font-weight: bold;
-    font-size: 36px;
+.quoteHeader1 {
+  font-family: 'Roboto', sans-serif;
+  color: #48C7EF;
+  font-weight: bold;
+  font-size: 36px;
 }
 
-.quoteHeader2{
-    font-family: 'Roboto', sans-serif;
-    color: #f6f6f6;
-    font-weight: normal;
-    font-size: 25px;
-    margin-top: 5px;
+.quoteHeader2 {
+  font-family: 'Roboto', sans-serif;
+  color: #f6f6f6;
+  font-weight: normal;
+  font-size: 25px;
+  margin-top: 5px;
 }
 
-.detailsContainer{
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    margin-top: 30px;
-    padding: 50px;
+.detailsContainer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin-top: 30px;
+  padding: 50px;
 }
 
-#getStartedButton{
-    background-color: #008dc3;
-    text-transform: uppercase;
-    color: #f6f6f6;
-    height: 85px;
-    width: 360px;
-    box-shadow: none;
-    border-radius: 10px;
-    font-weight: bold;
-    font-family: 'Roboto', sans-serif;
-    font-size: 30px;
-    cursor: pointer;
-    border-style: none;
-    outline: none;
+#getStartedButton {
+  background-color: #008dc3;
+  text-transform: uppercase;
+  color: #f6f6f6;
+  height: 85px;
+  width: 360px;
+  -webkit-box-shadow: none;
+          box-shadow: none;
+  border-radius: 10px;
+  font-weight: bold;
+  font-family: 'Roboto', sans-serif;
+  font-size: 30px;
+  cursor: pointer;
+  border-style: none;
+  outline: none;
 }
 
-#getStartedButton:hover{
-    background-color: #f8872a;
+#getStartedButton:hover {
+  background-color: #f8872a;
 }
-
+/*# sourceMappingURL=Freebies.css.map */
