--- a/src/components/Instructors/Instructors.css
+++ b/src/components/Instructors/Instructors.css
@@ -1,77 +1,119 @@
-*{
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
+* {
+  padding: 0;
+  margin: 0;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
-.instructorsContainer{
-    height: 445px;
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    background-color: #0f0f0f;
+.instructorsContainer {
+  height: 445px;
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  background-color: #0f0f0f;
 }
 
-.instructorsHeaderContainer{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    margin: 10px;
+.instructorsHeaderContainer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin: 10px;
 }
 
-.instructorsHeader{
-    color: #1AC7FD;
-    text-transform: uppercase;
-    word-spacing: 0.3em;
-    font-family: 'Roboto', sans-serif;
-    font-weight: bold;
-    font-size: 30px;
-    display: flex;
-    flex-direction: column;
-    margin: 10px;
+.instructorsHeader {
+  color: #1AC7FD;
+  text-transform: uppercase;
+  word-spacing: 0.3em;
+  font-family: 'Roboto', sans-serif;
+  font-weight: bold;
+  font-size: 30px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  margin: 10px;
 }
 
-.separator{
-    content: '';
-    height: 2px;
-    width: 80%;
-    background-image: linear-gradient(to right, #EDE638, #7376BC,  #ED2323);
-    border-radius: 1px;
+.separator {
+  content: '';
+  height: 2px;
+  width: 80%;
+  background-image: -webkit-gradient(linear, left top, right top, from(#EDE638), color-stop(#7376BC), to(#ED2323));
+  background-image: linear-gradient(to right, #EDE638, #7376BC, #ED2323);
+  border-radius: 1px;
 }
 
- .profileImage {
-    border-radius: 50%;
-    height: 250px;
-    width: 250px;
-    object-fit: cover;
-    object-position: 15% 15%;
+.profileImage {
+  border-radius: 50%;
+  height: 250px;
+  width: 250px;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: 15% 15%;
+     object-position: 15% 15%;
 }
 
-.profileContainer{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    /* width: 250px; */
+.profileContainer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  /* width: 250px; */
 }
 
-.instructorName{
-    color: #f6f6f6;
-    font-family: 'Roboto', sans-serif;
-    font-weight: bold;
-    font-size: 20px;
-    line-height: 55px;
-    width: 130px;
-    margin: 20px;
-    border-radius: 10px;
-    text-align: center
+.instructorName {
+  color: #f6f6f6;
+  font-family: 'Roboto', sans-serif;
+  font-weight: bold;
+  font-size: 20px;
+  line-height: 55px;
+  width: 130px;
+  margin: 20px;
+  border-radius: 10px;
+  text-align: center;
 }
 
 .profileInstuctor {
-   width: 250px;
-   display: flex;
-   flex-direction: column;
-   justify-content: center;
-   align-items: center;
+  width: 250px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
+/*# sourceMappingURL=Instructors.css.map */
