--- a/src/components/Welcome/welcome.css
+++ b/src/components/Welcome/welcome.css
@@ -1,104 +1,139 @@
-*{
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
+* {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
-.welcomeSection{
-    width: 100%;
-    position: relative;
-    display: flex;
-    justify-content: center;
-    align-content: center;
-    height: 650px;
+.welcomeSection {
+  width: 100%;
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -ms-flex-line-pack: center;
+      align-content: center;
+  height: 650px;
 }
 
-.welcomeContainer{
-    position: absolute;
-    top:90px;
-    height: 560px;
-    width: 100% ;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+.welcomeContainer {
+  position: absolute;
+  top: 90px;
+  height: 560px;
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
-.welcomeOverlay{
-    position: absolute;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-between;
-    width: 80vw;
-    height: 560px;
-    padding: 80px 0;
+.welcomeOverlay {
+  position: absolute;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  width: 80vw;
+  height: 560px;
+  padding: 80px 0;
 }
 
-.welcomeHeaderContainer{
-    display: flex;
-    flex-direction: column;
+.welcomeHeaderContainer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 
-.welcomeVideo{
-    position: absolute;
-    height: 560px;
-    width: 100%;
-    object-fit: cover;
-    top: 0px;
-    object-fit: cover;
+.welcomeVideo {
+  position: absolute;
+  height: 560px;
+  width: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  top: 0px;
+  object-fit: cover;
 }
 
-.welcomeHeader{
-    color: #f6f6f6;
-    font-size: 2em;
-    font-weight: bold;
-    text-align: center;
-    font-family: 'Roboto', sans-serif;
+.welcomeHeader {
+  color: #f6f6f6;
+  font-size: 2em;
+  font-weight: bold;
+  text-align: center;
+  font-family: 'Roboto', sans-serif;
 }
 
-.welcomeHeader2{
-    margin: 35px;
-    color: #f6f6f6;
-    font-size: 1.6em;
-    font-weight: 600;
-    text-align: center;
-    font-family: 'Roboto', sans-serif;
+.welcomeHeader2 {
+  margin: 35px;
+  color: #f6f6f6;
+  font-size: 1.6em;
+  font-weight: 600;
+  text-align: center;
+  font-family: 'Roboto', sans-serif;
 }
 
-.registerSeatContainer{
-    display: flex;
-    flex-direction: column;
-    align-items: center;   
+.registerSeatContainer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
-#reserveSeatButton{
-    background-color: #E9852A;
-    text-transform: uppercase;
-    color: #f6f6f6;
-    height: 70px;
-    width: 290px;
-    box-shadow: none;
-    border-radius: 10px;
-    font-weight: bold;
-    font-family: 'Roboto', sans-serif;
-    font-size: 1.4em;
-    cursor: pointer;
-    border-style: none;
-    outline: none;
-    overflow: hidden;
-    position: relative;
+#reserveSeatButton {
+  background-color: #E9852A;
+  text-transform: uppercase;
+  color: #f6f6f6;
+  height: 70px;
+  width: 290px;
+  -webkit-box-shadow: none;
+          box-shadow: none;
+  border-radius: 10px;
+  font-weight: bold;
+  font-family: 'Roboto', sans-serif;
+  font-size: 1.4em;
+  cursor: pointer;
+  border-style: none;
+  outline: none;
+  overflow: hidden;
+  position: relative;
 }
-
-
 
 #reserveSeatButton:hover {
-    background-color:#FF6B00;
+  background-color: #FF6B00;
 }
 
-.regisTerSeatLabel{
-    color: #f6f6f6;
-    font-weight: 700;
-    font-size: 1.8em;
-    margin: 25px;
-    font-family: 'Roboto', sans-serif;
+.regisTerSeatLabel {
+  color: #f6f6f6;
+  font-weight: 700;
+  font-size: 1.8em;
+  margin: 25px;
+  font-family: 'Roboto', sans-serif;
 }
+/*# sourceMappingURL=welcome.css.map */
