--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -25,13 +25,22 @@
 }
 
 /* change img to class name */
-img {
+#logoImage {
   height: 30px;
   width: 30px;
 }
 
 .logoSec {
   width: 50px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .hamburger {
@@ -49,26 +58,37 @@ img {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  width: 30%;
 }
 
 .navMenu {
   position: absolute;
   right: 90px;
-}
-
-li {
-  display: inline;
-}
-
-li a {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  width: 100%;
   text-decoration: none;
+}
+
+.navMenu li {
   color: #f6f6f6;
-  font-weight: 500;
   padding: 20px;
   font-family: 'Roboto', sans-serif;
   font-style: normal;
   font-weight: 500;
   font-size: 20px;
+  list-style: none;
 }
 
 @media only screen and (max-width: 1024px) {
