--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -6,7 +6,7 @@
 
   .navbar {
     background-color: #1f1f1f;
-    height: 90px;
+    height: 70px;
     width: 100%;
     padding: 25px;
     display: flex;
@@ -56,8 +56,7 @@
 
   
   .navMenu li {
-  
-    color: #f6f6f6;
+    color: #c5c5c5;
     padding: 20px;
     font-family: 'Roboto', sans-serif;
     font-style: normal;
@@ -66,7 +65,9 @@
     list-style: none;
   }
   
-
+  .navMenu :hover li{
+    color: #ffffff;
+  } 
 
 
 
