--- a/src/components/Welcome/welcome.scss
+++ b/src/components/Welcome/welcome.scss
@@ -10,13 +10,13 @@
     display: flex;
     justify-content: center;
     align-content: center;
-    height: 650px;
+    height: 580px;
 }
 
 .welcomeContainer{
     position: absolute;
-    top: 70px;
-    height: 580px;
+    top: 0;
+    height: 100%;
     width: 100% ;
     display: flex;
     flex-direction: column;
